# marketgoblin

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/rules/: project.md
.claude/skills/parquet-slice-check/: SKILL.md
.github/workflows/: ci.yml  publish.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  index.md  providers.md
notebooks/: marketgoblin_walkthrough.ipynb
providers/: index.html
scripts/: build_sector_map.py
search/: search_index.json
src/marketgoblin/: __init__.py  _bootstrap.py  _metadata.py  _normalize.py  _sector_indices_parser.py  _serialization.py  classification.py  datasets.py  goblin.py  sector_indices.py  ticker_metadata.py  vault.py
src/marketgoblin/_sector_indices_data/: gics_taxonomy_us.json  us.json
src/marketgoblin/sources/: __init__.py  _alpaca_parsing.py  _tiingo_parsing.py  _yahoo_parsing.py  alpaca.py  base.py  csv_source.py  tiingo.py  yahoo.py
src/marketgoblin/sources/_tiingo_parsing/: __init__.py  common.py  fundamentals.py  metadata.py  prices.py
src/marketgoblin/storage/: __init__.py  disk.py
tests/: _alpaca_data.py  _tiingo_data.py  conftest.py  test_alpaca.py  test_alpaca_parsing.py  test_classification.py  test_csv_source.py  test_goblin.py  test_metadata.py  test_normalize.py  test_report.py  test_sector_indices.py  test_storage.py  test_ticker_metadata.py  test_tiingo.py  test_tiingo_fundamentals.py  test_tiingo_metadata.py  test_tiingo_prices.py  test_vault.py  test_yahoo.py
