[project]
name = "marketgoblin"
version = "0.1.0"
description = "Market data platform for downloading and storing financial OHLCV data"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Antônio Salomão", email = "83646729+aexsalomao@users.noreply.github.com" }
]
keywords = ["market data", "finance", "stocks", "snapshot", "data pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0",
    "yfinance>=0.2",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/aexsalomao/marketgoblin"
Repository = "https://github.com/aexsalomao/marketgoblin"
Issues = "https://github.com/aexsalomao/marketgoblin/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
